<resources>
    <string name="app_name">Master Roller Dice</string>
    <string name="select_dice">Select Dice</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="roll">ROLL</string>
    <string name="borrar_historial">BORRAR HISTORIAL</string>
    <string name="modificador">MODIFICADOR</string>
    <string name="d100_dado">d100 dado</string>
    <string name="d20_dado">d20 dado</string>
    <string name="d12_dado">d12 dado</string>
    <string name="d10_dado">d10 dado</string>
    <string name="d8_dado">d8 dado</string>
    <string name="d6_dado">d6 dado</string>
    <string name="d4_dado">d4 dado</string>
    <string name="d4">D4</string>
    <string name="probabilidad_1_4">probabilidad 1/4</string>
    <string name="d6">D6</string>
    <string name="probabilidad_1_6">probabilidad 1/6</string>
    <string name="d8">D8</string>
    <string name="probabilidad_1_8">probabilidad 1/8</string>
    <string name="d10">D10</string>
    <string name="probabilidad_1_10">probabilidad 1/10</string>
    <string name="d12">D12</string>
    <string name="probabilidad_1_12">probabilidad 1/12</string>
    <string name="d20">D20</string>
    <string name="probabilidad_1_20">probabilidad 1/20</string>
    <string name="d100">D100</string>
    <string name="probabilidad_1_100">probabilidad 1/100</string>
    <string name="borrar">BORRAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="estas_seguro_de_borrar_tu_historial_de_tiradas">¿Estas seguro de borrar tu historial de tiradas?</string>
    <string name="dados">Dados</string>
    <string name="seleccionar_dados">SELECCIONAR DADOS</string>
    <string name="modo_ncualquiera">Modo: cualquiera</string>
    <string name="ok">OK</string>
</resources>