<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inicioFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".InicioFragment">

    <GridLayout
        android:id="@+id/gridDados"
        android:layout_width="865px"
        android:layout_height="1050px"
        android:layout_marginTop="10dp"
        android:alignmentMode="alignBounds"
        android:columnCount="3"
        android:gravity="center"
        android:rowCount="3"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- D4 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardD4"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?attr/background"
            app:cardCornerRadius="20dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="250px"
                android:layout_height="250px"
                android:layout_gravity="center_horizontal|top"
                android:contentDescription="@string/d4_dado"
                android:src="@drawable/d4_sin_fondo" />

            <TextView
                android:id="@+id/resultD4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <!-- D6 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardD6"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?attr/background"
            app:cardCornerRadius="20dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="250px"
                android:layout_height="250px"
                android:layout_gravity="center_horizontal|top"
                android:contentDescription="@string/d6_dado"
                android:src="@drawable/d6_sin_fondo" />

            <TextView
                android:id="@+id/resultD6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <!-- D8 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardD8"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?attr/background"
            app:cardCornerRadius="20dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="250px"
                android:layout_height="250px"
                android:layout_gravity="center_horizontal|top"
                android:contentDescription="@string/d8_dado"
                android:src="@drawable/d8_sin_fondo" />

            <TextView
                android:id="@+id/resultD8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <!-- D10 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardD10"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?attr/background"
            app:cardCornerRadius="20dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="250px"
                android:layout_height="250px"
                android:layout_gravity="center_horizontal|top"
                android:contentDescription="@string/d10_dado"
                android:src="@drawable/d10_sin_fondo" />

            <TextView
                android:id="@+id/resultD10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <!-- D12 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardD12"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?attr/background"
            app:cardCornerRadius="20dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="250px"
                android:layout_height="250px"
                android:layout_gravity="center_horizontal|top"
                android:contentDescription="@string/d12_dado"
                android:src="@drawable/d12_sin_fondo" />

            <TextView
                android:id="@+id/resultD12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <!-- D20 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardD20"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?attr/background"
            app:cardCornerRadius="20dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="250px"
                android:layout_height="250px"
                android:layout_gravity="center_horizontal|top"
                android:contentDescription="@string/d20_dado"
                android:src="@drawable/d20_sin_fondo" />

            <TextView
                android:id="@+id/resultD20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <!-- D100 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardD100"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?attr/background"
            app:cardCornerRadius="20dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="250px"
                android:layout_height="250px"
                android:layout_gravity="center_horizontal|top"
                android:contentDescription="@string/d100_dado"
                android:src="@drawable/d100_sin_fondo" />

            <TextView
                android:id="@+id/resultD100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRoll"
        android:layout_width="470px"
        android:layout_height="235px"
        android:fontFamily="@font/chakra_petch_bold"
        android:text="@string/roll"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridDados" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:gravity="center"
        android:text=""
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/cardExpandable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRoll" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardExpandable"
        android:layout_width="300dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/rojoPrincipal"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeTopRounded"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modificador"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutModificador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMinus"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_marginEnd="34dp"
                    android:backgroundTint="?attr/buttonStyle"
                    android:padding="10dp"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/minus"
                    app:iconSize="20dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtModificador"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/txtModificador"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_txtview_modificador"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnPlus"
                    app:layout_constraintStart_toEndOf="@id/btnMinus"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPlus"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_marginStart="36dp"
                    android:backgroundTint="?attr/buttonStyle"
                    android:padding="10dp"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/add"
                    app:iconSize="20dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtModificador"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>